--- a/css/styles.css
+++ b/css/styles.css
@@ -1,86 +1,93 @@
 .footer_logo {
-    background-color:white;
-    text-align:center;
-    padding: 0px;
-}
+  background-color: white;
+  text-align: center;
+  padding: 0px; }
+
 .footer_column {
-    overflow: hidden;
-    text-align: center;
-    position: relative;
-    display: flex;
-    justify-content: center;
-        }
+  overflow: hidden;
+  text-align: center;
+  position: relative;
+  display: flex;
+  justify-content: center; }
+
 .footcol {
-    width: 20%;
-}
+  width: 20%; }
+
 li {
-    list-style-type: none;
-    font-size: 14px;
-    padding: 5px;
-   }
+  list-style-type: none;
+  font-size: 14px;
+  padding: 5px; }
+
 .social_buttons {
-    text-align: center;
-    padding: 0px;
-}
+  text-align: center;
+  padding: 0px; }
+
 .footer_column_par {
-    color: #82625E;
-    font-size: 20px;
-}
+  color: #82625E;
+  font-size: 20px; }
+
 ul {
-    padding: 0px 20px;
-}
+  padding: 0px 20px; }
+
 .footer_a {
-    text-decoration: none;
-    color: black;
-}
-.devotion_body{
-    width: 1280px;
-}
+  text-decoration: none;
+  color: black; }
+
+.devotion_body {
+  width: 1280px; }
 
 .header_logo_img {
-    padding: 0px 0;
-}
+  padding: 0px 0; }
+
 .header_delivery_a {
-    text-decoration: none;
-    color: black;
-}
+  text-decoration: none;
+  color: black; }
+
 .dev_h {
-    display: flex;
-    justify-content: flex-end;
-}
+  display: flex;
+  justify-content: flex-end; }
+
 .hd_span {
-    margin: 0;
-}
+  margin: 0; }
+
 .dev_h2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
+
 .dev_nav_menu {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    background-color: #F6F6F6;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: 1180px;
-}
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  background-color: #F6F6F6;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 1180px; }
+
 .header_a {
-    text-decoration: none;
-    padding: 20px;
-    color: black;
-}
+  text-decoration: none;
+  padding: 20px;
+  color: black; }
+
 .dev_nav_menu_ul {
-    list-style: none;
-}
+  list-style: none; }
+
 .dev_nav_menu_ul li {
-    float: left;
-    position: relative;
-    background: #F6F6F6;
-}
+  float: left;
+  position: relative;
+  background: #F6F6F6; }
+
 .dev_nav_menu_ul li .sub-nav {
-    display: none;
-}
+  display: none; }
+
 .dev_nav_menu_ul li:hover .sub-nav {
-    display: block;
-}
+  display: block; }
+
+.block {
+  display: inline; }
+  .block-element___modificator {
+    display: inline;
+    color: red;
+    background-color: red; }
+  .block-element___modificator-second:hover {
+    display: inline; }
