--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,8 @@
 
 .mainbody-navmenu__ul {
   padding: 0px;
-  margin: 0; }
+  margin: 0;
+  list-style-type: none; }
 
 .mainbody-navmenu__ul_li_link {
   text-decoration: none;
@@ -198,15 +199,18 @@
   margin: 10px; }
 
 .mainbody-faqpage__table {
-  border-radius: 5px;
-  border: 1px dotted #82625E;
+  border: 2px dotted white;
   border-collapse: collapse;
-  width: 800px; }
+  width: 800px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px; }
 
 .mainbody-faqpage__table_tr_td {
   border: 1px dotted #82625E;
   text-align: left;
-  vertical-align: top; }
+  vertical-align: top;
+  border-radius: 20px; }
 
 .mainbody-navmenu-faqpage {
   display: flex;
@@ -219,4 +223,7 @@
   border-radius: 5px; }
 
 .mainbody-faqpage {
-  width: 800px; }
+  width: 800px;
+  border: 1px dotted #82625E;
+  border-radius: 10px;
+  overflow: hidden; }
