--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -177,6 +177,7 @@
 .mainbody-navmenu__ul {
     padding: 0px;
     margin: 0;
+    list-style-type: none;
 }
 .mainbody-navmenu__ul_li_link {
     text-decoration: none;
@@ -199,15 +200,18 @@
     margin: 10px;
 }
 .mainbody-faqpage__table {
-    border-radius: 5px;
-    border: 1px dotted #82625E;
+    border: 2px dotted white;
     border-collapse: collapse;
     width: 800px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius:20px;
+    border-radius: 20px;
 }
 .mainbody-faqpage__table_tr_td {
   border: 1px dotted #82625E;
   text-align: left;
   vertical-align: top;
+  border-radius: 20px
 }
 .mainbody-navmenu-faqpage {
     display: flex;
@@ -221,5 +225,8 @@
 }
 .mainbody-faqpage {
     width: 800px;
+    border: 1px dotted #82625E;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
